--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "jimp": "^0.16.1",
     "libphonenumber-js": "^1.10.20",
     "link-preview-js": "^3.0.0",
-    "libsignal": "github:ElrayyXml/signal-node",
+    "libsignal": "github:techwiz37/signal-node",
     "lodash": "^4.17.21",
     "music-metadata": "^7.12.3",
     "pino": "^9.6",
@@ -118,4 +118,5 @@
   "bugs": {
     "url": "https://github.com/ElrayyXml/Baileys/issues"
   }
+
 }
