--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "gen:protobuf": "sh WAProto/GenerateStatics.sh",
     "lint": "eslint src --ext .js,.ts,.jsx,.tsx",
     "lint:fix": "eslint src --fix --ext .js,.ts,.jsx,.tsx",
-    "prepack": "tsc",
-    "prepare": "tsc",
+    "prepack": "echo 'ElrayyXml Baileys'",
+    "prepare": "echo 'ElrayyXml Baileys'",
     "preinstall": "node ./engine-requirements.js",
     "release": "release-it",
     "test": "jest"
@@ -120,4 +120,5 @@
   }
 
 }
+
 
